--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,91 +2,65 @@ $icon-font-path: '../fonts/';
 // bower:scss
 @import "bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
 // endbower
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans:300');
 
-.browserupgrade {
-  margin: 0.2em 0;
-  background: #ccc;
-  color: #000;
-  padding: 0.2em 0;
+a, a:link, a:visited, a:hover, a:active {
+  color: grey;
+  text-decoration: none;
 }
 
-/* Space out content a bit */
-body {
-  padding-top: 20px;
-  padding-bottom: 20px;
+nav {
+  width: 100%;
+  padding: 30px;
+  font-family: 'Josefin Sans', sans-serif;
 }
 
-/* Everything but the jumbotron gets side spacing for mobile first views */
-.header,
-.marketing,
-.footer {
-  padding-right: 15px;
-  padding-left: 15px;
+nav ul {
+  list-style: none;
+  display: block;
+  width: 99%;
+  margin: 0 auto;
 }
 
-/* Custom page header */
-.header {
-  padding-bottom: 20px;
-  border-bottom: 1px solid #e5e5e5;
+nav ul li {
+  display: inline-block;
+  font-size: 23px;
 }
 
-/* Make the masthead heading the same height as the navigation */
-.header h3 {
-  margin-top: 0;
-  margin-bottom: 0;
-  line-height: 40px;
+.brand {
+  width: 60%;
+  margin-left: 140px;
 }
 
-/* Custom page footer */
-.footer {
-  padding-top: 19px;
-  color: #777;
-  border-top: 1px solid #e5e5e5;
-}
-
-/* Customize container */
-@media (min-width: 768px) {
-  .container {
-    max-width: 730px;
-  }
-}
-.container-narrow > hr {
-  margin: 30px 0;
-}
-
-/* Main marketing message and sign up button */
-.jumbotron {
+.brand a {
+  display: inline-block;
   text-align: center;
-  border-bottom: 1px solid #e5e5e5;
-}
-.jumbotron .btn {
-  padding: 14px 24px;
-  font-size: 21px;
+  font-size: 30px;
 }
 
-/* Supporting marketing content */
-.marketing {
-  margin: 40px 0;
-}
-.marketing p + h4 {
-  margin-top: 28px;
+
+.search {
+  float: right;
+  margin-right: 50px;
 }
 
-/* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
-  /* Remove the padding we set earlier */
-  .header,
-  .marketing,
-  .footer {
-    padding-right: 0;
-    padding-left: 0;
-  }
-  /* Space out the masthead */
-  .header {
-    margin-bottom: 30px;
-  }
-  /* Remove the bottom border on the jumbotron for visual effect */
-  .jumbotron {
-    border-bottom: 0;
-  }
+
+.search input {
+  width: 100%;
+  height: 39px;
+  // border-top: 1px solid #ccc;
+  // border-left: 1px solid #ccc;
+  border-radius: 15px;
+  border: none;
+  font-size: 20px;
+  padding: 20px;
+  font-family: inherit;
+  -moz-box-shadow:    1px 2px 3px 1px #ccc;
+  -webkit-box-shadow: 1px 2px 3px 1px #ccc;
+  box-shadow:         1px 2px 3px 1px #ccc;
+  font-family: 'Lato', sans-serif;
+}
+
+.search input:focus {
+  outline: none;
 }
