--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -7,60 +7,64 @@ $icon-font-path: '../fonts/';
 a, a:link, a:visited, a:hover, a:active {
   color: grey;
   text-decoration: none;
+  background: none;
 }
 
-nav {
-  width: 100%;
-  padding: 30px;
+.container-fluid > nav {
+  margin-top: 20px;
+}
+
+.navbar-nav > li > a:hover, .navbar-nav > li > a:link,
+.navbar-nav > li > a:visited, .dropdown-menu > li > a:hover,
+.dropdown-menu > li > a:link, .dropdown-menu > li > a:visited {
+  background: none;
+}
+
+.container-fluid {
   font-family: 'Josefin Sans', sans-serif;
 }
 
-nav ul {
-  list-style: none;
-  display: block;
-  width: 99%;
-  margin: 0 auto;
-}
-
-nav ul li {
-  display: inline-block;
-  font-size: 23px;
+.navbar li {
+  font-size: 18px;
 }
 
 .brand {
-  width: 60%;
-  margin-left: 140px;
+  position: fixed;
+  top: 4.9%;
+  left: 47%;
+  /* bring your own prefixes */
+  transform: translate(-50%, -50%);
 }
 
 .brand a {
-  display: inline-block;
-  text-align: center;
-  font-size: 30px;
+  font-size: 33px;
 }
-
 
 .search {
-  float: right;
   margin-right: 50px;
+  margin-top: 5px;
 }
-
 
 .search input {
   width: 100%;
   height: 39px;
   // border-top: 1px solid #ccc;
   // border-left: 1px solid #ccc;
-  border-radius: 15px;
+  border-radius: 5px;
   border: none;
   font-size: 20px;
   padding: 20px;
   font-family: inherit;
-  -moz-box-shadow:    1px 2px 3px 1px #ccc;
-  -webkit-box-shadow: 1px 2px 3px 1px #ccc;
-  box-shadow:         1px 2px 3px 1px #ccc;
+  -moz-box-shadow:    0px 1px 1px 0px #ccc;
+  -webkit-box-shadow: 0px 1px 1px 0px #ccc;
+  box-shadow:         0px 1px 1px 0px #ccc;
   font-family: 'Lato', sans-serif;
 }
 
 .search input:focus {
   outline: none;
+}
+
+.cats {
+  display: none;
 }
